receta-agregados-tarta-link-menu

--- a/pages/receta-tarta-manzana.html
+++ b/pages/receta-tarta-manzana.html
@@ -12,10 +12,10 @@
 <body>
     <header class="header-menu">
         <div class="contenedor-menu">
-            <img class="logo" src="../images/logo.png" alt="">
+            <a href="../index.html"><img class="logo" src="../images/logo.png" alt=""></a>
             <nav class="menu-nav desktop">
                 <ul class="nav-items-desktop">
-                    <a href="#" target="_blank"><li class="nav-item">Home</li></a>
+                    <a href="../index.html" target="_selft"><li class="nav-item">Home</li></a>
                     <a href="#" target="_blank"><li class="nav-item">Recetas</li></a>
                     <a href="#" target="_blank"><li class="nav-item">Nosotros</li></a>
                     <a href="#" target="_blank"><li class="nav-item">Contacto</li></a>
