--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <header class="header-menu">
         <div class="contenedor-menu">
-            <img class="logo" src="./images/logo.png" alt="">
+           <a href="./index.html" target="_self"><img class="logo" src="./images/logo.png" alt=""></a> 
             <nav class="menu-nav desktop">
                 <ul class="nav-items-desktop">
-                    <a href="#" target="_blank"><li class="nav-item">Home</li></a>
+                    <a href="./index.html" target="_self"><li class="nav-item">Home</li></a>
                     <a href="#" target="_blank"><li class="nav-item">Recetas</li></a>
                     <a href="#" target="_blank"><li class="nav-item">Nosotros</li></a>
                     <a href="#" target="_blank"><li class="nav-item">Contacto</li></a>
@@ -46,7 +46,7 @@
         </div>
         <nav class="menu-nav mobile">
             <ul class="nav-items-mobile">
-                <a href="#" target="_blank"><li class="nav-item">Home</li></a>
+                <a href="./index.html" target="_blank"><li class="nav-item">Home</li></a>
                 <a href="#" target="_blank"><li class="nav-item">Recetas</li></a>
                 <a href="#" target="_blank"><li class="nav-item">Nosotros</li></a>
                 <a href="#" target="_blank"><li class="nav-item">Contacto</li></a>
