animacion-redes-receta

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
             <h2>Tu Rincón Gastronómico</h2>
             <p>Nuestra página es el lugar perfecto para amantes de la cocina de todos los niveles, con consejos culinarios, recetas populares y la promesa de sabores excepcionales en cada plato. Únete a nuestra comunidad y convierte la cocina en tu forma de expresión artística.</p>
             <h3>¡Bienvenido a la experiencia culinaria definitiva!</h3>
-            <button class="btn-main-receta desktop">Receta del Día</button>
+            <a href="./assets/receta-tarta-de-manzana.pdf" download><button class="btn-main-receta desktop">Receta del Día</button></a>
         </div>
         <img class="img-main" src="./images/main-img.png" alt="">
-        <button class="btn-main-receta mobile">RECETA DEL DÍA</button>
+        <a href="./assets/receta-tarta-de-manzana.pdf" download><button class="btn-main-receta mobile">RECETA DEL DÍA</button></a>
     </main>
     <section class="contenedor-superdeliciosas">
         <h2>Recetas <span>SuperDeliciosas</span></h2>
@@ -106,14 +106,14 @@
                 <label for="newsletter">Suscríbete a nuestro Newsletter</label>
                 <input type="checkbox" name="newsletter" id="newsletter" required>
             </div>
-            <input class="enviar" type="submit" value="Enviar">
+            <button class="enviar" type="submit">Enviar</button>
         </form>
     </section>
     <aside class="redes-aside">
         <h4>¡Descubrí más en nuestras Redes Sociales!</h4>
         <div class="contenedor-redes">
             <a href="#" target="_blank">
-                <svg class="instagram" alt="instagram" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <svg  class="instagram" alt="instagram" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <path d="M4 4m0 4a4 4 0 0 1 4 -4h8a4 4 0 0 1 4 4v8a4 4 0 0 1 -4 4h-8a4 4 0 0 1 -4 -4z" />
                     <path d="M12 12m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0" />
